# D3APL--Atividade-2

./: README.md
data/pubfig83/: test.csv  train.csv
docs/: vertopal.com_ntbk02_transfer_learning03.odt
notebooks/: D3APL - Atividade 2.ipynb
notebooks/Alexandre/: D3APL_image_retraining-Copy1.ipynb  D3APL_image_retraining-efficientnetv2-b0_finetuning.ipynb  D3APL_image_retraining.ipynb  pyproject.toml  tf2_image_retraining-Copy1.ipynb
notebooks/Lucas/: ntbk01_baseline.ipynb  ntbk02_transfer_learning01.ipynb  ntbk02_transfer_learning02.ipynb  ntbk02_transfer_learning03.ipynb
