[tool.poetry]
name = "D3APL_atividade_2"
version = "0.1.0"
description = ""
authors = ["afreireosorio <alexandreosorio@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.19.0,<2.0.0"
tensorflow-hub = "^0.12.0"
ipykernel = "^6.15.0"
matplotlib = "^3.5.2"
tensorflow = "^2.9.1"
tensorflow-cpu = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
